# cl-compiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: arith.cl  atoi.cl  complex.cl  giulio.cl  good.cl  hairyscary.cl  lam.cl  list.cl  palindrome.cl  primes.cl  sort_list.cl
include/cool/analysis/: analysis_context.h  classes_definition.h  classes_implementation.h  inheritance_check.h  method_record.h  pass.h  type_check.h
include/cool/codegen/: codegen.h  codegen_base.h  codegen_code.h  codegen_code_base.h  codegen_constant.h  codegen_constants.h  codegen_context.h  codegen_data.h  codegen_helpers.h  codegen_prepare.h  codegen_tables.h
include/cool/core/: class_registry.h  context.h  context.inl  log_message.h  logger.h  logger_collection.h  status.h  symbol_table.h  symbol_table.inl  tables.h
include/cool/frontend/: error_codes.h  parser.h  scanner.h  scanner_extra.h  scanner_spec.h  scanner_state.h  token.h
include/cool/ir/: class.h  common.h  expr.h  fwd.h  node.h  visitable.h
include/cool/scanner/: cool_flex.h
src/: CMakeLists.txt
src/analysis/: CMakeLists.txt  classes_definition.cpp  classes_implementation.cpp  inheritance_check.cpp  type_check.cpp
src/codegen/: CMakeLists.txt  codegen.cpp  codegen_base.cpp  codegen_code.cpp  codegen_code_base.cpp  codegen_constant.cpp  codegen_constants.cpp  codegen_data.cpp  codegen_helpers.cpp  codegen_prepare.cpp  codegen_tables.cpp
src/core/: CMakeLists.txt  class_registry.cpp  context.cpp  logger.cpp  logger_collection.cpp  status.cpp  tables.cpp
src/exec/: cool.cpp
src/frontend/: CMakeLists.txt  parser.cpp  parser_spec.y  scanner.cpp  scanner_spec.l  scanner_spec.lex  scanner_state.cpp
src/ir/: CMakeLists.txt  class.cpp  common.cpp  expr.cpp
src/scanner/: CMakeLists.txt  cool_flex.cpp  cool_flex.lex
tests/: CMakeLists.txt
tests/analysis/: test_classes_definition.cpp  test_classes_implementation.cpp  test_inheritance_check.cpp  test_type_check.cpp
tests/codegen/: test_codegen_helpers.cpp
tests/core/: test_class_registry.cpp  test_log_message.cpp  test_logger_collection.cpp
tests/frontend/: test_parser.cpp  test_scanner  test_scanner.cpp
tests/frontend/assets/: parser_test.cl
tests/ir/: test_expr.cpp
tests/scanner/: test_scanner.cpp
tests/utils/: test_utils.h
